melon-head/src/App/AppHeader/styles.module.scss
$divider: 1px solid rgba(var(--rgb_color2), 0.2);

@mixin btn {
    background: transparent;
    display: flex;
    justify-content: center;
    align-items: center;
    border: 0;
    cursor: pointer;
    transition: background .2s ease-in-out;

    &:hover {
        background: rgba(var(--rgb_color2), 0.1);
    }
}

.root {
    background: var(--color1);
    color: var(--color2);

    display: grid;
    flex: 64px 0 0;
    grid-template-areas: 'left center right';
    grid-template-columns: 64px auto 64px;
    column-gap: 12px;
    align-items: stretch;
}

.nav-btn {
    @include btn;
    border-right: $divider;
}

.app-title {
    display: flex;
    gap: 12px;
    align-items: center;
    font-size: 18px;
    font-weight: 600;
    margin: 0;
    white-space: nowrap;
    overflow: hidden;
    cursor: pointer;

    @media screen and (max-width: 620px) {
        & {
            font-size: 16px;
        }
    }
}

.profile-btn {
    @include btn;
    border-left: $divider;
}

